deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charpai-frontend
  namespace: dev-charp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: charpai-frontend
  template:
    metadata:
      labels:
        app: charpai-frontend
    spec:
      containers:
        - name: charpai-frontend
          image: 390844737706.dkr.ecr.ap-south-1.amazonaws.com/charpai-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "1"
