ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: charpai-frontend
  namespace: dev-charp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:390844737706:certificate/9bdb6bb6-62b0-407c-baeb-de7c2b8c816b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: platform.whilter.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: charpai-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - platform.whilter.ai
